Getting home screen to work with new design